# latest_core

./: .gitmodules  CMakeLists.txt  README.md
.backups/: CMakeLists.txt
.backups/project/: CMakeLists.txt
.docs/: README.md
.docs/chatbot/verlauf/: README.md
.tools/: img_to_array.py
lib/: CMakeLists.txt
lib/ssd1306_i2c/: CMakeLists.txt
src/: CMakeLists.txt  FreeRTOSConfig.h  icxx_core.c
